added ARG copy, fixed Prec not being copied, added ARG helper functions, fixed getDistances, fixed candidates to be from covering node, removed heuristic weights